--- a/app/views/machine_toolx/machine_tools/_form_new.html.erb
+++ b/app/views/machine_toolx/machine_tools/_form_new.html.erb
@@ -1,13 +1,15 @@
+<% if false %>
+  <%= render inline: ERB.new(@erb_code).result(binding) %>
+  
+<% else %>
 <%= simple_form_for(@machine_tool) do |f| %>    
-  
-  <%#= render inline: ERB.new(@erb_code).result(binding) %>
-  <%%>
-  
+
   <%= f.input :name, :label => t('Equipment Name') }%>
   <%= f.input :model_num, :label => t('Model#') %>
   <%= f.input :tech_spec, :label => t('Tech Spec'), :input_html => {:rows => 4} %>
   <%= f.input :serial_num, :label => t('Serial#'), :readonly => readonly?(@machine_tool, 'serial_num') %>
   <%= f.input :category_id, :label => t('Equipment Category'), :collection => Commonx::CommonxHelper.return_misc_definitions('equipment_category'), :include_blank => true %>
+  <%= f.input :op_cost_hourly, :label => t('Operation Cost($/h)') %>
   <%= f.input :mfg_date, :label => t('Manafacture Date'), :order => [:year, :month], :include_blank => true  %>
   <%= f.input :mfr, :label => t('Manufacturer') %>
   <%= f.input :purchase_date, :label => t('Purchase Date'), :order => [:year, :month], :include_blank => true  %>
@@ -26,6 +28,9 @@
   <%= f.input :weight_kg, :label => t('Weight (KG)') %>
   <%= f.input :dimension, :label => t('Equipment Dimension (LWH)') %>
   <%= f.input :note, :label => t('Note'), :input_html => {:rows => 8}, :readonly => readonly?(@machine_tool, 'note') %>
-    
+  
+  <%= link_to t('Cancel'), SUBURI + "/authentify/view_handler?index=0", :class => BUTTONS_CLS['action'] %>  
   <%= f.button :submit, t('Save'), :class => BUTTONS_CLS['action'] %>  
+  <% end %>
+  
 <% end %> 
