--- a/app/views/machine_toolx/machine_tools/_index.html.erb
+++ b/app/views/machine_toolx/machine_tools/_index.html.erb
@@ -4,7 +4,7 @@
 <% else %>
 <h1><%= t('Machine Tools')%></h1>
 <div class="byop_pagination"><%= will_paginate models %></div>
-<table>
+<table class="table table-striped">
   <tr>
     <th></th>
     <th><%=t('Equipment Name')%></th>
@@ -48,7 +48,12 @@
 <% end %>
 </table>
 
-  <%= link_to t('Back'), SUBURI + "/view_handler?index=0",  :class => BUTTONS_CLS['action'] %>&nbsp;&nbsp;
-  <%= link_to t('New Machine Tool'), SUBURI + "/view_handler?index=1&url=#{new_machine_tool_path}", :class => BUTTONS_CLS['action'] if has_action_right?('create', params[:controller]) %>
-  
+	<table class="table table-striped">
+	  <tr>
+	    <th>
+  			<%= link_to t('Back'), SUBURI + "/view_handler?index=0",  :class => BUTTONS_CLS['action'] %>&nbsp;&nbsp;
+  			<%= link_to t('New Machine Tool'), SUBURI + "/view_handler?index=1&url=#{new_machine_tool_path}", :class => BUTTONS_CLS['action'] if has_action_right?('create', params[:controller]) %>
+        </th>
+	  </tr>
+	</table>
 <% end %>
